--- a/sipxpbx/WEB-INF/phonebook/ManagePhonebooks_de.properties
+++ b/sipxpbx/WEB-INF/phonebook/ManagePhonebooks_de.properties
@@ -1,6 +1,14 @@
+title=Telefonbücher
 title.managePhonebooks=Telefonb\u00FCcher verwalten
 link.addPhonebook=Telefonbuch hinzuf\u00FCgen
 name=Name
 description=Beschreibung
 confirm.delete=Sind Sie sicher, dass Sie das selektierte Telefonbuch l\u00F6schen wollen?
 label.delete=L\u00F6schen
+label.googleDomain=Google Apps Domain
+description.googleDomain=Der Standart, welcher dazu benutzt wird, Gmail Kontakte zu importieren, wenn die Domain bei den Account Details ausgelassen wird.
+error.googleDomain=Default Google Apps Domain kann nicht leer sein.
+button.apply=Übernehme
+msg.googleDomain.success=Die Google Domain wurde erfolgreich geändert!
+label.everyone=Jeder
+description.everyone=Wenn aktiviert, wird angenommen, dass alle Systembenutzer Teil eines Benutzertelefonbuches sind
