--- a/sipxpbx/WEB-INF/sbc/ListSbcDevices_de.properties
+++ b/sipxpbx/WEB-INF/sbc/ListSbcDevices_de.properties
@@ -6,7 +6,13 @@ help.sbcConfig="Session Border Controllers (SBC)" erlauben es SIP Anrufe auf sic
   hier definiert werden, k\u00F6nnen f\u00FCr die Konfiguration von Regeln f\u00FCr IP-Anrufe verwendet werden. "Unmanaged SBCs" erfordern \
   manuelle Konfiguration am SBC unter Benutzung von Werkzeugen des Herstellers des SBC.
 prompt.addNew=SBC hinzuf\u00FCgen...
+link.internetCalling=Internet Anrufe
+link.gateways=Gateways
 link.dialPlans=W\u00E4lplan
 link.jobStatus=Dienstestatus
+msg.success.restart={0} SBC route(s) werden neu gestartet. Gehen Sie auf die Job Status Seite um die laufenden Operationen zu beobachten.
+msg.error.internalSbcDeletion=Die internen SBC Routes können nicht geändert werden. Gehen Sie auf die Server Konfigurationsseite und deaktivieren Sie die SIP Trunking Regel.
 button.propagate=Sende Konfiguration
 button.propagateAll=Sende alle Konfigurationen
+button.restart=Neustart
+sbc.creation.error=Es ist nicht erlaubt, mehr als {0} "{1}"(s) zu erstellen
