--- a/sipxpbx/WEB-INF/search/SearchPage_de.properties
+++ b/sipxpbx/WEB-INF/search/SearchPage_de.properties
@@ -6,6 +6,7 @@ org.sipfoundry.sipxconfig.admin.callgroup.CallGroup=Gruppenruf
 org.sipfoundry.sipxconfig.admin.dialplan.AutoAttendant=Automatische Vermittlung
 org.sipfoundry.sipxconfig.admin.dialplan.DialingRule=Wahlregel
 org.sipfoundry.sipxconfig.admin.parkorbit.ParkOrbit=Park Orbit
+org.sipfoundry.sipxconfig.admin.authcode.AuthCode=Auth Code
 org.sipfoundry.sipxconfig.common.User=Benutzer
 org.sipfoundry.sipxconfig.conference.Bridge=Konferenzbr\u00FCcke
 org.sipfoundry.sipxconfig.conference.Conference=Konferenz
@@ -13,3 +14,12 @@ org.sipfoundry.sipxconfig.gateway.Gateway=Gateway
 org.sipfoundry.sipxconfig.phone.Phone=Telefon
 org.sipfoundry.sipxconfig.setting.Group=Gruppe
 org.sipfoundry.sipxconfig.upload.Upload=Dateien
+org.sipfoundry.sipxconfig.acd.AcdServer=ACD Server
+org.sipfoundry.sipxconfig.acd.AcdQueue=ACD Warteschlange
+org.sipfoundry.sipxconfig.acd.AcdLine=ACD Line
+org.sipfoundry.sipxconfig.acd.AcdAgent=ACD Agent
+title=Suchen Seite
+button.rebuildSearchIndex=Bilde Such Index neu
+description.rebuildSearchIndex=Wenn Sie denken, dass die Suche ein Ergebnis hätte liefern müssen, erstellen Sie den Such Index neu.
+msg.rebuildSearchIndex.success=Der Suchindex wurde neu erstellt. Bitte versuchen Sie Ihre Suche erneut.
+msg.rebuildSearchIndex.error=Neuerstellen des Such Indexes fehlgeschlagen. Bitte versuchen Sie es erneut.
