--- a/sipxpbx/WEB-INF/setting/EditSchedule_de.properties
+++ b/sipxpbx/WEB-INF/setting/EditSchedule_de.properties
@@ -1,2 +1,5 @@
 title=Zeitplan
 add=Periode hinzuf\u00FCgen
+error.invalidPeriodException = Die Startzeit einer der Perioden ist nach der Stopzeit.
+error.overlappingPeriodsException = Die definierten Perioden überlappen. Bitte ändern Sie dies um fortzufahren.
+error.sameStartAndStopHoursException = Die Startzeit ist gleich der Stopzeit.
