--- a/sipxpbx/WEB-INF/setting/GroupFilter_de.properties
+++ b/sipxpbx/WEB-INF/setting/GroupFilter_de.properties
@@ -5,3 +5,4 @@ label.all=- alle -
 label.filter=Filtern mit...
 label.groups=Gruppe\:
 label.search=- suche -
+label.unassigned=- nicht zugewiesen -
