--- a/sipxpbx/WEB-INF/setting/GroupTable_de.properties
+++ b/sipxpbx/WEB-INF/setting/GroupTable_de.properties
@@ -5,3 +5,5 @@ button.moveDown=Nach Unten
 button.moveUp=Nach Oben
 members=Anzahl Mitglieder
 name=Gruppenname
+title=Gruppen Tabelle
+msg.error.removeAdminGroup=Die Administratoren Gruppe kann nicht gelöscht werden
