--- a/sipxpbx/WEB-INF/upload/EditUpload_de.properties
+++ b/sipxpbx/WEB-INF/upload/EditUpload_de.properties
@@ -1,3 +1,8 @@
 warning=Aenderungen k\u00F6nnen nur f\u00FCr inaktive Dateien vorgenommen werden. 
 label.activate=Aktivieren
-label.inactivate=Inaktivieren
+label.inactivate=Deaktivieren
+error.alreadyDeployedName = Sie müssen {0} freigeben, bevor Sie diese Dateien in Auftrag geben. Sie können nur ein Set an Dateien vom Typ {1} auf einmal in Auftrag geben.
+error.alreadyDeployedSize = Es sind bereits {0} Dateien vom Typ {1} in Auftrag. Sie können nur ein Set an Dateien vom Typ {1} auf einmal in Auftrag geben.
+error.duplicatedUploadName={0} existiert bereits. Bitte wählen Sie einen unterschiedlichen Namen.
+error.wrongTypeFile=Ungültige Firmware Datei: {0}
+title=Upload
