--- a/sipxpbx/WEB-INF/upload/ManageUploads_de.properties
+++ b/sipxpbx/WEB-INF/upload/ManageUploads_de.properties
@@ -9,6 +9,18 @@ deployed=Aktiv
 upload=Ger\u00E4tetyp
 button.activate=Aktivieren
 button.inactivate=Deaktivieren
+button.installFirmware=Install Default System Firmwares
 confirm.delete=Sind Sie sicher, dass Sie die selektierten Dateien l\u00F6schen wollen?
 confirm.activate=Sind Sie sicher, dass Sie die selektierten Dateien aktivieren wollen?
 confirm.inactivate=Sind Sie sicher, dass Sie die selektierten Dateien deaktivieren wollen?
+confirm.installFirmware=Sind Sie sicher, dass Sie die gesamten Standart System Firmwares installieren wollen?
+label.deployed.on=Aktiv
+label.deployed.off=Inaktiv
+error.alreadyActivated=Eine oder mehrere Ihrer Auswahlen sind bereits aktiviert worden.
+error.duplicatedUploadName={0} existiert bereits
+error.file.not.found=Fehler : Datei nicht gefunden - {0}
+error.io.exception=IO Fehler - {0}
+error.interrupted.exception=Task Unterbrochen - {0}
+error.wrongTypeFile=Ungültige Firmwaredatei: {0}
+tab.files = Dateien
+tab.settings = Einstellungen
