--- a/sipxpbx/WEB-INF/user/EditUser_de.properties
+++ b/sipxpbx/WEB-INF/user/EditUser_de.properties
@@ -1,1 +1,6 @@
 title=Benutzerdaten
+quick.help=Wählen Sie <em>Telefone</em> um diesen Benutzer zu einem oder mehreren Telefonen hinzuzufügen.
+invalid.branch=Benutzergruppen Abteilung wird vererbt. Spezifische Benutzerabteilung kann nicht unterschiedlich sein
+msg.error.renameAdminUser=superadmin Benutzer kann nicht umbenannt werden
+error.changePintokenRequiredException = Wenn der Benutzername geändert wird, müssen Sie auch den PIN ändern
+duplicate.imid.error=Ein Benutzer mit der instant messaging id {0} existiert bereits
