--- a/sipxpbx/WEB-INF/user/ManageUsers_de.properties
+++ b/sipxpbx/WEB-INF/user/ManageUsers_de.properties
@@ -1,6 +1,8 @@
 #Created by JInto - www.guh-software.de
 #Thu Oct 05 18:42:46 CEST 2006
 add=Benutzer hinzuf\u00FCgen
+quick.help=<p>Wählen Sie den Füge Benutzer hinzu Link und erstellen Sie einen neuen Benutzer.</p>\
+<p>Nachdem ein Benutzer erstellt worden ist, können Sie Ihn mit einem oder mehreren verwalteten Telefonen verbinden</p>
 delete=Entfernen
 label.addTo=Hinzuf\u00FCgen zu\:
 label.delete=Entfernen
