--- a/sipxpbx/WEB-INF/user/ManageUsers_de.properties
+++ b/sipxpbx/WEB-INF/user/ManageUsers_de.properties
@@ -12,3 +12,4 @@ msg.success.addToUserGroupAction={0} Benutzer zur Gruppe {1} hinzugef\u00FCgt.
 msg.success.removeFromUserGroupAction={0} Benutzer aus Gruppe {1} entfernt.
 title=Benutzerverwaltung
 confirm.delete=Sind Sie sicher, dass Sie die selektierten Benutzer l\u00F6schen wollen?
+msg.error.removeAdminUser=superadmin Benutzer kann nicht gelöscht werden
