--- a/sipxpbx/WEB-INF/user/NewUser_de.properties
+++ b/sipxpbx/WEB-INF/user/NewUser_de.properties
@@ -1,3 +1,5 @@
 createAnother=Einen weiteren Benutzer hinzuf\u00FCgen?
 extensionPool=Nummernvergabe
 title=Neuen Benutzer hinzuf\u00FCgen
+duplicate.imid.error=Ein Benutzer mit der instant messaging id {0} existiert bereits
+invalid.branch=Benutzergruppen Abteilung wird vererbt. Spezifische Benutzerabteilung kann nicht unterschiedlich sein
