--- a/sipxpbx/WEB-INF/user/SupervisorPermission_de.properties
+++ b/sipxpbx/WEB-INF/user/SupervisorPermission_de.properties
@@ -5,3 +5,4 @@ description.supervisorForGroups=Bitte tragen sie all Gruppen, welche dieser Grup
  ACD statistiken verwendet.
 label.supervisorForGroups=Gruppenleiter
 supervisorPermission=Gruppenleiterberechtigung
+title=ACD Agent Supervisor
