--- a/sipxpbx/WEB-INF/user/UserForm_de.properties
+++ b/sipxpbx/WEB-INF/user/UserForm_de.properties
@@ -21,3 +21,15 @@ message.userIdEqualsAlias=Die Benutzer ID \"{0}\" kann nicht gleich sein wie ein
 message.duplicateUserIdOrAlias=Die Benutzer ID oder das Alias \"{0}\" duplizieren einen existierenden Namen oder Alias f\u00FCr \
  einen Benutzer oder Dienst.
 # You'll find additional fields localized in sipxconfig-web.properties
+inherited.branch=Gruppen Abteilung: {0}
+invalid.group=Gewählte Gruppen Abteilung und Benutzer Abteilung passen nicht zusammen
+# You'll find additional fields localized in sipxconfig-web.properties
+label.emailAddress=E-mail Adresse
+notified=Benachrichtigt
+notified.desc=Flag welche darüber informiert, ob der Benutzer darüber informiert wurde, dass sein System Zugang erstellt worden ist.
+label.salutation=Begrüßung
+label.manager=Manager
+label.employeeId=Mitarbeiter ID
+emptyText=Leere Passwörter
+empty.label=
+empty.desc=Leeres Passwort Feld
