--- a/sipxpbx/WEB-INF/user/UserGroupSettings_de.properties
+++ b/sipxpbx/WEB-INF/user/UserGroupSettings_de.properties
@@ -3,6 +3,8 @@
 title=Konfiguration f\u00FCr die Benutzergruppe
 editGroup=Benutzergruppe editieren
 link.schedules=Zeitpl\u00E4ne
+link.speedDial=Schnellwahl
+add=Füge Zeitplan hinzu
 add=Zeitplan hinzuf\u00FCgen
 
 quick.help.schedule=<p>Hier definierte Zeitpl\u00E4ne werden für zeitabh\u00E4ngige Anrufweiterleitung \
@@ -12,3 +14,32 @@ quick.help.personalAttendant=<p>Jeder Benutzer kann auf dem Benutzerportal Optio
    Anrufbeantworter konfigurieren. Anrufer, welche an den Antwortdienst weitergeleitet werden, k\u00F6nnen mit den Tasten 0 bis 9 \
    zwischen verschiedenen Funktionen w\u00E4hlen. Der Administrator kann die Funktion f\u00FCr die Taste 0 definieren. Dies \
    entspricht in der Regel einem Rezeptionist oder Assistenten. Der Benutzer kann dies individuell \u00E4ndern.</p>
+
+quick.help.unifiedMessaging=<p>Auf dieser Seite können Sie Parameter, die mit der voicemail / IMAP integration zusammenhängen konfigurieren. \
+Diese Parameter basieren auf einer pro-Benutzer Politik, jede Gruppe hat Ihre eigenen IMAP Server Parameter.</p>
+
+conference.link=Konferenz Zuweisung
+extcontact.link=Externe Benutzer Zuweisung
+quick.help.speedDial=Schnellwahlnummern sind für alle Benutzer dieser Gruppe definiert. Sie sind Telefonen zugewiesen, \
+welche Schnellwahlnummern unterstützen, für welche der Benutzer auf dem Telefon als erste Verbindung eingetragen ist. \
+Nehmen Sie zur Kenntnis, dass das Schnellwahlverfahren noch nicht auf allen Telefonen implementiert ist.<br /><br />\
+Vergewissern Sie sich, dass Sie Namen wählen, die das Telefon, das Sie benutzen auch anzeigen kann.<br /><br /> \
+Subscribe to presence sollte nur auf Telefonen genutzt werden, welche diese Funktion unterstützen. Nehmen Sie zur Kenntnis, \
+dass Anwesenheit noch nicht auf allen Telefonen implementiert ist.<br /><br />\
+Wenn die Telefone geupdated werden, dann werden alle Telefone, welche momentan auf die Benutzer dieser Gruppe angemeldet sind, \
+automatisch neustarten.<br/>
+button.updatePhones=Speichere und update Telefon(e)
+tab.configure=Konfiguriere
+tab.schedules=Zeitpläne
+tab.conference=Konferenz
+tab.extcontact=Externer Benutzer
+tab.speeddial=Schnellwahlen
+tab.voicemail=Unified Messaging
+tab.moh=Musik während dem Halten
+quick.help.moh=<b>Benutze System Konfiguration:</b> wird das Quellen Set in den System Einstellungen auswählen.<br/><br/>\
+<b>Soundkarte:</b> Wird Musik von der Soundkarte des Servers streamen.<br/><br/>\
+<b>Persönliches Musik Verzeichniß:</b> wird alle Audio Dateien durchgehen im persönlichen Musik während dem halten Ordner.<br/><br/>\
+<b>System Musik Verzeichnis:</b> wird alle Audio Dateien durchgehen im lokalen Musik während dem halten Ordner.<br/><br/>\
+<b>Keine:</b> wird Musik während des Wartens deaktivieren.
+branch.validity.error=Mindestens ein Benutzer in dieser Gruppe hat eine unterschiedliche Abteilung als der ausgewählte: {0}
+msg.error.renameAdminGroup=Die Administratorengruppe kann nicht umbenannt werden
