--- a/sipxpbx/WEB-INF/user/UserNavigation_de.properties
+++ b/sipxpbx/WEB-INF/user/UserNavigation_de.properties
@@ -3,10 +3,17 @@
 label.user=Benutzer\:
 link.forwarding=Anrufweiterleitung
 link.identification=Benutzerdaten
+link.phones=Telefone
+link.attendant=Persönlicher Auto-Teilnehmer
+link.registrations=Registrationen
 link.speedDial=Kurzwahlrufnummern
 link.supervisor=Gruppenleiter
 link.phones=Telefone
 link.schedules=Zeitpl\u00E4ne
+link.conferences=Konferenzen
+link.extendedInfo=Kontaktinformationen
+link.mailboxPreferences=Unified Messaging
+link.musicOnHold=Musik während dem Halten
 
 quick.help.personalAttendant=<p>Jeder Benutzer kann auf dem Benutzerportal Optionen f\u00FCr den pers\u00F6nlichen \
    Anrufbeantworter konfigurieren. Anrufer, welche an den Antwortdienst weitergeleitet werden, k\u00F6nnen mit den Tasten 0 bis 9 \
