--- a/sipxpbx/WEB-INF/user/UserPhones_de.properties
+++ b/sipxpbx/WEB-INF/user/UserPhones_de.properties
@@ -6,3 +6,12 @@ quick.help=<p>Die Tabelle zeigt alle Telefone an, die dem Benutzer zugeordnet si
         Selektieren Sie die Seriennummer des Telefons um es zu konfigurieren; selektieren Sie die Leitung, um \
         deren Parameter zu konfigurieren.</p>
 jobStatus=Dienstestatus
+link.addPhones=Füge existierendes Telefon hinzu
+label.showPersonalContacts=Zeige persönliche Kontakte auf dem Telefon
+description.showPersonalContacts=Aktivieren Sie diese Option um persönliche Kontakte auf dem Telefon anzuzeigen.<br/> \
+Diese Einstellung wird aktiv, wenn die Profile gesendet worden sind und die Telefone neu gestartet wurden.
+showOnPhone.success=Zeige persönliche Kontakte auf dem Telefon Einstellung erfolgreich gespeichert.
+label.isShared=Geteilt
+description.isShared=Falls aktiviert hat der Benutzer Verbindungen auf mehreren Telefonen und Anrufe werden zwischen diesen Telefonen aufgeteilt. \
+Dies wird <acronym title="Bridged Line Appearances">BLA</acronym> genannt.
+userSaved.success=Verbindungseinstellungen erfolgreich gespeichert.
