--- a/sipxpbx/WEB-INF/user/UserRegistrations_de.properties
+++ b/sipxpbx/WEB-INF/user/UserRegistrations_de.properties
@@ -11,3 +11,4 @@ uri=URI
 helpText=Registrierte Telefone sind funktionsf\u00E4hig und k\u00F6nnen Anrufe empfangen. Telefone, welche \
  nicht registriert sind oder deren Registrierung verfallen ist, sind entweder ausgeschaltet, haben keine \
  Netzwerkverbindung, oder sind falsch konfiguriert.
+helpText.counterpath=Benutzen Sie http://{0}:12000/cmcprov/login als einen Provisionierungsserver für {1} softphone.
