--- a/sipxpbx/WEB-INF/user/UserSearchResults_de.properties
+++ b/sipxpbx/WEB-INF/user/UserSearchResults_de.properties
@@ -4,3 +4,6 @@ aliases=Aliasse
 firstName=Vorname
 lastName=Nachname
 userName=Benutzer ID
+normalUser=Normaler Benutzer
+adminUser=Benutzer mit superadmin Privilegien
+emailAddress=E-mail
