--- a/sipxpbx/WEB-INF/user/UserTable_de.properties
+++ b/sipxpbx/WEB-INF/user/UserTable_de.properties
@@ -4,3 +4,7 @@ aliases=Aliasse
 firstName=Vorname
 lastName=Nachname
 userName=Benutzer ID
+normalUser=Normaler Benutzer
+adminUser=Benutzer mit superadmin Privilegien
+imId=IM ID
+title=Benutzertabelle
