--- a/sipxpbx/WEB-INF/user_portal/ManagePresence_de.properties
+++ b/sipxpbx/WEB-INF/user_portal/ManagePresence_de.properties
@@ -1,7 +1,11 @@
 title=Status des ACD-Pr\u00E4senzdienstes
-text=Beim Pr\u00E4senzdiens an- oder abmelden. Diese Funktion wird von Agenten f\u00FCr den ACD-Dienst verwendet.
+text=Beim Pr\u00E4senzdienst an- oder abmelden. Diese Funktion wird von Agenten f\u00FCr den ACD-Dienst verwendet.
 signed.out=Sie sind abgemeldet (nicht erreichbar).
 signed.in=Sie sind angemeldet (erreichbar).
 
 button.SignIn=Anmelden
 button.SignOut=Abmelden
+
+label.selectServer=Wählen Sie den ACD Server aus:
+
+noUserAgentFound.error=Präsenz Server Support ist auf diesem System nicht aktiviert für diesen Benutzer.
