--- a/sipxpbx/WEB-INF/user_portal/UserPhonebookPage_de.properties
+++ b/sipxpbx/WEB-INF/user_portal/UserPhonebookPage_de.properties
@@ -7,3 +7,5 @@ button.search=Suche
 button.reset=Zur\u00FCcksetzen
 label.query=Suche
 description.query=Geben Sie einen Named oder Benutzer ID ein
+msg.exportError=Nicht möglich das Telefonbuch zu exportieren. Sehen Sie in dem Logfile nach für Fehler.
+tooltip.call=Klicken um anzurufen...
