--- a/sipxpbx/WEB-INF/sipXconfig-web_de.properties
+++ b/sipxpbx/WEB-INF/sipXconfig-web_de.properties
@@ -211,43 +211,43 @@ feature.proxy.description = Der SIP Proxy Service behandelt allen eingehenden un
 feature.registrar = SIP Registrar
 feature.registrar.description = Wirft ein Auge auf aktuelle Benutzer Registrierungen und führt die Anrufannahme Funktion aus. Ein registrar wird pro Server benötigt. Dieser Service benötigt mindestens einen SIP Registrar Server im Cluster und die Nat Traversal (Media Relay) Funktion aktiviert.
 feature.mongo = Verteilte Datenbank
-feature.mongo.description = The distributed database service is used to store server state and configuration information, and allows for redundant load sharing servers. One or more distributed database services are required per cluster.
+feature.mongo.description = Der verteilte Datenbank Service wird benutzt um Server status und Konfigurationsinformationen zu speichern und erlaubt für eine gleichmäßige Verteilung das Serverteilen. Einer oder mehrere verteilte Datenbank Services sind pro Cluster nötig.
 feature.mwi = MWI
-feature.mwi.description = Message Waiting Indicator service for incoming voice mail messages. One or more MWI services are required per cluster. This service requires Media Services to be enabled.
+feature.mwi.description = Message Waiting Indicator service für eingehende voicemail Nachrichten. Einer oder mehrere MWI services werden pro Cluster benötigt. Dieser Service benötigt den aktivierten Medien Service.
 feature.ivr = Voicemail/Auto Attendant
-feature.ivr.description = VoiceMail and Auto Attendant telephony applications. Only one service is allowed per cluster and is an optional service. This service requires Media Services to be enabled.
+feature.ivr.description = VoiceMail und Auto Attendant Telefonie Applikationen. Nur ein Service ist pro Cluster erlaubt und es ist ein optionaler Service. Dieser Service benötigt den aktivierten Medien Service.
 feature.acd = ACD (Legacy)
-feature.acd.description = Automatic Call Distribution (Legacy) Service. This service will be deprecated in a future release.
+feature.acd.description = Automatische Anrufverteilungs (Legacy) Service. Dieser Service wird in einer zukünftigen Version überholt werden.
 feature.sipxcdr = CDRs
-feature.sipxcdr.description = Call Detail Recording service. This service gathers details about calls and stores them. It is recommended to run this service on each server that also runs the SIP Proxy service. This service requires the SIP Proxy service to be enabled. This service requires at least one SIP Proxy server in the cluster.
+feature.sipxcdr.description = Call Detail Recording Service. Dieser Service sammelt Informationen über Anrufe und speichert diese. Es wird empfohlen diesen Service auf jedem Server auszuführen, auf welchem der SIP Proxy Service ebenfalls läuft. Dieser Service setzt voraus, dass der SIP Proxy Service aktiviert ist. Dieser Service benötigt mindestens einen SIP Proxy Server im Cluster.
 feature.imbot = IMBot
-feature.imbot.description = Instant Messaging Interactive RoBot. This service provide the MyBuddy feature for Instant Messaging users. Only one IM Bot service is allowed per cluster and is an optional service. This service requires the IM-XMPP service to be enabled.
-feature.phonelog = Phone logging server
-feature.phonelog.description = Receives debugging log messages for specific phone models. Only one phone logging service is allowed per cluster and is an optional service.
+feature.imbot.description = Instant Messaging Interactive RoBot. Dieser Service bietet die MyBuddy Funktion für Instant Messaging Benutzer an. Nur ein IM Bot service ist pro Cluster erlaubt und es ist ein optionaler Service. Dieser Service benötigt den aktivierten IM-XMPP Service.
+feature.phonelog = Telefon logging Server
+feature.phonelog.description = Empfängt debugging log Nachrichten für spezielle Telefonmodelle. Nur ein Telefon logging Service ist pro Cluster erlaubt und es ist ein optionaler Service.
 feature.acdPresence = ACD Presence (Legacy)
-feature.acdPresence.description = The ACD Presence (Legacy) service keeps track of ACD agent state. Required service only if you enable the ACD (Legacy) service.
-feature.authCode = Authorization Code
-feature.authCode.description = The authorization code service prompts users for a PIN number before placing a call which requires permissions. Only one Authorization code service is allowed per cluster. This service requires Media Services to be enabled.
-feature.acdStats = ACD Statistics (Legacy)
-feature.acdStats.description = The ACD statistics service collects call statistics for the ACD (Legacy) service. This service is required if the ACD (Legacy) service is enabled.
+feature.acdPresence.description = Der ACD Presence (Legacy) Service behält den ACD Agent Status im Auge. Ist nur ein benötigter Service, falls Sie den ACD (Legacy) Service aktivieren.
+feature.authCode = Authorizierungscode
+feature.authCode.description = Der Authorisierungscode fragt Benutzer nach einer PIN Nummer, bevor ein Anruf, welcher Berechtigungen erfordert, durchgestellt wird. Nur ein Authorisierungscode Server ist pro Cluster erlaubt. Dieser Service setzt den aktivierten Medien Service voraus.
+feature.acdStats = ACD Statistiken (Legacy)
+feature.acdStats.description = Der ACD Statistik Service sammelt Anrufstatistiken für den ACD (Legacy) Service. Dieser Service wird benötigt, falls der ACD (Legacy) Service aktiviert ist.
 feature.saa = SAA/BLA
-feature.saa.description = The Shared Appearance Agent(SAA) service, also known as Bridged Line Appearance(BLA) or Shared Line Appearance (SLA). Only one SAA/BLA service is allowed per cluster and is an optional service. This service requires at least one SIP Proxy server in the cluster.
+feature.saa.description = Der Shared Appearance Agent(SAA) Service, auch bekannt als der Bridged Line Appearance(BLA) oder Shared Line Appearance (SLA). Nur ein SAA/BLA Service ist pro Cluster erlaubt und es ist ein optionaler Service. Dieser Server benötigt mindestens einen SIP Proxy Server im Cluster.
 feature.autoAttendant = Auto Attendant
-feature.autoAttendant.description = Presents callers with an announcement and a list of choices, then makes routing decisions based on user input. Only one Auto Attendant service is allowed per cluster and is an optional service. Enabling this feature also enables the Voicemail feature.
-feature.provision = Phone Auto-Provisioning
-feature.provision.description = The phone auto-provision service will generate a basic configuration for new phones added to your network and assign a temporary ID number for quick and easy full provisioning.
+feature.autoAttendant.description = Empfängt Anrufer mit einer Ansage und einer Liste von Auswahlmöglichkeiten dann entscheidet er wohin der Anrufer gerouted wird, basierend auf Benutzereingaben. Nur ein Auto Attendant Service ist pro Cluster erlaubt und es ist ein optionaler Service. Das Aktivieren dieser Funktion aktiviert auch die Voicemail Funktion.
+feature.provision = Telefon Auto-Provisioning
+feature.provision.description = Der Telefon auto-provision Service wird eine Basis Konfiguration für neue Telefone, welche in das Netzwerk integriert werden generieren und wird eine temoräre ID Nummer vergeben, für schnelle und einfache Provisionierung.
 feature.instantMessage = IM - XMPP
-feature.instantMessage.description = XMPP instant messaging server. Only one IM - XMPP service is allowed per cluster and is an optional service.
+feature.instantMessage.description = XMPP instant messaging Server. Nur ein  IM - XMPP Service ist per Cluster erlaubt und es ist ein optionaler Service.
 feature.restServer = REST API
-feature.restServer.description = The REST API service provides an application programming interface for developers to interact with that allows functions such as call control, user creation, etc. Only one REST API service is allowed per cluster and is an optional service. This service requires at least one CDR manager and at least one Proxy server in the cluster.
-feature.conference = Conferencing
-feature.conference.description = Conferencing service. One or more conferencing services per cluster is allowed and is an optional service. This service requires Media Services to be enabled on the same host.
+feature.restServer.description = Der REST API Service bietet eine Applikationsprogrammierungsoberfläche für Entwickler um mit den erlaubten Funktionen, wie Anruf Kontrolle, Benutzer Erstellung, etc zu interagieren. Nur ein REST API Service ist pro Cluster erlaubt und es ist ein optionaler Service. Dieser Service benötigt mindestens einen  CDR Manager und mindestens einen Proxy Server im Cluster.
+feature.conference = Konferenzen
+feature.conference.description = Konferenz Service. Einer oder mehrere Konferenz Server sind pro Cluster erlaubt und es ist ein optionaler Service. Dieser Service benötigt Medien Services aktiviert auf demselben Host.
 feature.sbcBridge = SIP Trunking
-feature.sbcBridge.description = The SIP trunking service is a Back to Back User Agent (B2BUA) that acts as a gateway to SIP ITSP services for bridging calls. This is not required for calling between most SIP servers.
+feature.sbcBridge.description = Der SIP trunking Service ist ein Back to Back User Agent (B2BUA), welcher als ein Gateway zu SIP ITSP Services agiert um Anrufe zu überbrücken. Dies wird von den meißten SIP Servern nicht vorausgesetzt für Anrufe.
 feature.borderController = SBC
-feature.borderController.description = Session Border Controller. Not Used (to be deleted)
-feature.park = Call Park
-feature.park.description = The call park service allows a user to place a call on hold in a park queue where it can be retrieved by another user. Only one call park service is allowed per cluster and is an optional service. This service requires SIP Proxy server on the same host.
+feature.borderController.description = Session Border Controller. Wird nicht benutzt (wird bald gelöscht)
+feature.park = Anruf Parken
+feature.park.description = Der Anruf Parken Service erlaubt es Benutzern einen Anruf in einer Warteschlange zu parken, wo er von einem anderen Benutzer zurückgeholt werden kann. Nur ein Anruf Park Service ist pro Cluster erlaubt und es ist ein optionaler Service. This service requires SIP Proxy server on the same host.
 feature.page = Paging Groups
 feature.page.description = The Paging Groups service allows select users to perform a one-way page to a group of other users. Only select phone models support this feature. Only one paging groups service is allowed per cluster and is an optional service. This service requires at least one SIP Proxy server in the cluster.
 feature.callpilot = CallPilot Voicemail Menu
